# AIR

./: .env.example  .gitignore  .pytest.ini  404.html  README.md  blurry  dede.ppl  demo_pipeline  index.html  main.py  mkdocs.yml  pipeline2  pyproject.toml  requirements.txt  setup.py  sitemap.xml  temp.txt  test_pipeline  test_pipeline2
.github/workflows/: cicd.yml  github_pages.yml  pylint.yml
Cellpose/: README.md  setup.py
Cellpose/cellpose/: cli.py  core.py  export.py  segformer.py  test_mkl.py  transforms.py
CellposeFork/: README.md  conftest.py
CellposeFork/cellpose/: __main__.py  (+9 more)
about/: index.html
annotationTranslator/: app.py  app_utils.py  database_utils.py  logger.py
api/: index.html
cellposeUI/: README.md  __main__.py  core.py  dynamics.py  io.py  models.py
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: about.md  changelog.md  configuration.md  contributing.md  getting-started.md  index.md  installation.md  license.md  user-guide.md
exports/: test1  test2  test3
features/: index.html
getting-started/: index.html
images/: 20241121_SCD_a079_plate02_B02_0000_T8_C4.tif  cells7_cp_outlines.txt
installation/: index.html
license/: index.html
search/: search_index.json
src/: README.md  __init__.py  ai.py  black_and_white.py  cellposeUI.py  cellpose_launch.py  cellpose_utils.py  chat_interface.py  chatgpt.py  example.py  final_model_interface.py  global_model_state.py  napari_image_filtering_interface.py  napari_image_filters.py  napari_image_filters_ui.py  pipelines.py  prototype_image_functions.py  stt.py  testfile.py  utils.py  workflows.py
stylesheets/: dark.css  light.css
tests/: test_image_filtering_interface.py  test_image_filters.py
user-guide/: index.html
(+29 files in other folders)
